Refactor directory structure.

--- a/nginx.conf
+++ b/nginx.conf
@@ -28,9 +28,8 @@ http{
 
         location /proxy {
             resolver 8.8.8.8 1.1.1.1;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-forward-for $proxy_add_x_forwarded_for;
             proxy_pass $arg_u;
+            proxy_set_header Connection keep-alive;
             proxy_ssl_server_name on; # SNI
         }
 
